cluster/infrastructure/networking/cloudflared/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cloudflared-metrics
  namespace: cloudflared
spec:
  selector:
    app: cloudflared
  ports:
    - name: metrics
      port: 2000
      targetPort: 2000
      protocol: TCP
